[package]
name = "rust6502"
version = "0.1.0"
edition = "2021"
authors = ["Kai Walter <ancientitguy@outlook.com>"]
readme = "README.md"
default-run = "functional-test"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[lib]
name = "rust6502"
path = "src/lib.rs"

[[bin]]
name = "apple1"
path = "src/apple1.rs"

[[bin]]
name = "functional-test"
path = "src/functional-test.rs"
