[package]
name = "apple1-gen"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "Document", "Element"] }

[features]
default = []

[package.metadata]
description = "Apple 1 generator WASM module."
