[package]
name = "apple1-wasm"
version = "0.1.0"
authors = ["GitHub <noreply@github.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
js-sys = "0.3.55"
wasm-bindgen = "0.2.78"
rust6502 = { path = "../core" }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "*", optional = true }

[dev-dependencies]
wasm-bindgen-test = "*"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[dependencies.web-sys]
version = "0.3.55"
features = [
  'CanvasRenderingContext2d',
  'ImageData',
  'Document',
  'Element',
  'HtmlElement',
  'HtmlCanvasElement',
  'Window',
  'console',
]